# journalisering-af-opmaerksomhedsskemaer-i-dubu

./: README.md  config.py  main.py  pyproject.toml
services/: __init__.py  mail_service.py  utils.py
