[project]
name = "process-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "automation-server-client",
    "dubu-client",
    "odk-tools",
    "azure-identity>=1.15.0",
    "msgraph-sdk>=1.0.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[tool.uv.sources]
automation-server-client = { git = "https://github.com/odense-rpa/automation-server-client.git", tag = "v0.2.1" }
odk-tools = { git = "https://github.com/odense-rpa/odk-tools.git" }
dubu-client = { git = "https://github.com/odense-rpa/dubu-client.git" }
